--- a/android/configs/android-recommended.cfg
+++ b/android/configs/android-recommended.cfg
@@ -10,6 +10,15 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CPUSETS=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_PERF=y
+CONFIG_UTS_NS=y
+CONFIG_IPC_NS=y
+CONFIG_USER_NS=y
+CONFIG_PID_NS=y
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 CONFIG_COMPACTION=y
 CONFIG_DM_UEVENT=y
 CONFIG_DRAGONRISE_FF=y
